syntax = "proto3";

package Blocksettle.Communication.ProxyPb;

message Message
{
    string email = 1;

    // Serialized Request (from proxy) or Response (from PB)
    bytes data = 2;
}

message Request
{
    message StartOtc
    {
        bool is_seller = 1;

        int64 amount = 2;
        int64 price = 3;

        bytes settlement_id = 4;

        bytes auth_address_seller = 5;
        bytes auth_address_buyer = 6;

        // Used to check fees and other details (UTXO for payin, settlement address etc)
        bytes unsigned_payin = 7;
        bytes unsigned_payout = 8;
        bytes unsigned_payout_fallback = 9;

        string chat_id_seller = 10;
        string chat_id_buyer = 11;
    }

    message BroadcastXBT
    {
        string settlement_id = 1;
        bytes signed_payin = 2;
        bytes signed_payout = 3;
    }

    oneof data
    {
        // Requests
        StartOtc start_otc = 1;

        // Messages
        BroadcastXBT broadcast_xbt = 2;
    }
}

message Response
{
    message StartOtc
    {
        bool success = 1;
        string error_msg = 2;
    }

    oneof data
    {
        StartOtc start_otc = 1;
    }
}
